--- a/Textbook/第1章-人工智能系统概述/1.3-深度学习系统组成与生态.md
+++ b/Textbook/第1章-人工智能系统概述/1.3-深度学习系统组成与生态.md
@@ -25,7 +25,7 @@
   - 支持深度学习生命周期中的各个环节：模型压缩、推理、安全、隐私保护等。不仅能构建深度学习模型，能够支持全生命周期的深度学习程序开发，并在系统内对全生命周期进行分析与优化。当前的深度学习工程化场景，已经不是灵感一现单一的优化就能迅速取得领先优势，更多的是能否有完善的基础设施，快速复现社区工作，批量验证新的想法进行试错，所以一套好的完善的全流程的生命周期管理能够大幅度提升深度学习算法层面的生产力。
 - 提供全面多样的深度学习任务需求的系统支持：
   - 除了传统的深度学习训练与推理的支持，还能支持强化学习、自动化机器学习等新的训练范式。除了推理需求之外，训练作业中新的范式层出不穷，例如，需要不断和环境或模拟器交互以获取新数据的强化学习方式，批量大规模提交搜索空间的自动化机器学习方式等，这些新的范式造成对之前单一支持单模型之外，在多模型层面，训练与推理任务层面产生了新的系统抽象与资源，作业管理需求。
-  - 提供更强大和可扩展的计算能力。让用户的深度学习程序可扩展并部署于可以并行计算的节点或者集群，应对大数据和大模型的挑战。因为当前深度学习模型不断通过大模型层数更多的模型产生更好的算法层面的效果，促使系统需要支持更大的模型，同时由于企业 IT 基础设施不但完善，能够不断沉淀新的数据，也会伴随着大数据的问题。大模型与大数据促使存储与计算层面系统在摩尔定律失效的大背景下迫切需要通过并行与分布式计算的范式扩展算力与存储的支持。
+  - 提供更强大和可扩展的计算能力。让用户的深度学习程序可扩展并部署于可以并行计算的节点或者集群，应对大数据和大模型的挑战。因为当前深度学习模型不断通过大模型层数更多的模型产生更好的算法层面的效果，促使系统需要支持更大的模型，同时由于企业 IT 基础设施不断完善，能够不断沉淀新的数据，也会伴随着大数据的问题。大模型与大数据促使存储与计算层面系统在摩尔定律失效的大背景下迫切需要通过并行与分布式计算的范式扩展算力与存储的支持。
   - 自动编译优化算法，包括不限于：
     - 自动推导计算图：尽可能的通过符号执行或即时编译技术，获取更多的计算图信息，进而数据驱动方式做定制化的优化。
     - 根据不同体系结构自动并行化：面对部署场景的多样化体系结构，训练阶段异构硬件的趋势，框架让用户透明的进行任务放置，并行化，以期以最为优化的方式在指定硬件配置下，并行化与减少 I/O，逼近硬件提供的性能上限。
